Changed the  entire working environment and started the creation of the React UI

--- a/developement/app/index.html
+++ b/developement/app/index.html
@@ -22,25 +22,25 @@
 </head>
 <body>
 <nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid"> 
+  <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed navbar-button" data-toggle="collapse" data-target="#topFixedNavbar1" aria-expanded="false"><span>Menu</span></button>
-      <a class="navbar-brand nav-a" href="portfolio"> Liam Kande | UI/UX Designer </a></div>
+      <a class="navbar-brand nav-a" href="portfolio.html"> Liam Kande | UI/UX Designer </a></div>
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="topFixedNavbar1">
       <ul class="nav navbar-nav navlist">
         <li class="navlistitem active"><a href="#">Home</a></li>
         <!-- <li class="navlistitem"><a href="about.html">About</a> </li> -->
-        <li class="navlistitem"><a href="portfolio">Portfolio</a> </li>
+        <li class="navlistitem"><a href="portfolio.html">Portfolio</a> </li>
         <!-- <li class="navlistitem"><a href="contact.html">Contact</a> </li> -->
       </ul>
     </div>
-    
-    <!-- /.navbar-collapse --> 
-    
+
+    <!-- /.navbar-collapse -->
+
   </div>
-  <!-- /.container-fluid --> 
+  <!-- /.container-fluid -->
 </nav>
 <div class="container-fluid">
   <div class="row">
@@ -56,10 +56,10 @@
 </div>
 <footer>copyright 2017. Made with 100% recycled pixels by Liam Ansoumane Kande. </footer>
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-1.11.3.min.js"></script> 
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script src="js/jquery-1.11.3.min.js"></script>
 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
+<!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
