Replaced HTML UI with React UI

--- a/developement/app/portfolio.html
+++ b/developement/app/portfolio.html
@@ -10,7 +10,7 @@
 <!-- Portfolio -->
 <link href="css/portfolio.css" rel="stylesheet" type="text/css">
 <!-- portfolio JS -->
-<!-- <script defer src="js/portfolio.js"></script> -->
+<script defer src="js/portfolio.js"></script>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -73,6 +73,7 @@
           <li data-target="#carousel1" data-slide-to="2"></li>
           <li data-target="#carousel1" data-slide-to="3"></li>
           <li data-target="#carousel1" data-slide-to="4"></li>
+            <li data-target="#carousel1" data-slide-to="5"></li>
           <!--  <li data-target="#carousel1" data-slide-to="5"></li> -->
         </ol>
         <div class="carousel-inner" role="listbox">
@@ -103,7 +104,7 @@
           </div>
           <div class="item"><img src="images/Caurosels6.jpg" alt="Third slide image" class="center-block">
             <div class="carousel-caption">
-              <h3>Yosemit Webpage</h3>
+            <!--  <h3>Yosemit Webpage</h3> -->
             </div>
           </div>
         </div>
@@ -111,101 +112,14 @@
     </section>
     <!-- ReactInterface -->
     <div class="row">
-      <article>
-        <div id="interface">
+      <article id="interface">
 
-        </div>
       </article>
     </div>
 
     <!-- Projects container -->
 
     <div class="row" >
-      <article class="col-sm-12 col-md-12 box-sp boxwrapper"> <img src="images/thumbnail-SVG/thumbnail-4.svg" class="img-thumbnail img-responsive center-block imgwrapper " width="100" alt="thumbnail1">
-        <h2 class="textsh">Bulletin Board App <br>
-          with React.js </h2>
-        <h3><em>React.js | ES6 | JSX | Babel | NPM </em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Bulletin-Board-App-with-ReactJS.zip" download="reactProject"><img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center">Developed a Bulletin board app using React components and properties, added state to components to handle events, worked with PropTypes, developed a more complete app with React.js and companion tools like Babel, NPM, and more.</p>
-      </article>
-      <article class="col-sm-12 col-md-12 box-sp-two boxwrapper"><img src="images/thumbnail-SVG/thumbnail-3.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Responsive Website &amp; Images with JavaScript </h2>
-        <h3><em> JavaScript | ES6 | HTML | CSS</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Website_Images_with_JS.zip" download="reponsiveJSProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center">Created a fully functional website using JavaScript. Automated responsive images markup,  and worked with objects, variables, data types, conditionals, functions, loops, closures, the DOM and more.</p>
-      </article>
-      <article class="col-sm-12 col-md-12 box-sp-three boxwrapper"> <img src="images/thumbnail-SVG/thumbnail-1.svg" class="img-thumbnail img-responsive center-block imgwrapper " width="100" alt="thumbnail1">
-        <h2 class="textsh">Responsive Design with Bootstrap</h2>
-        <h3><em>Bootstrap | Responsive Design | HTML | CSS | JavaScript </em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Responsive_Design_with_Bootstrap.zip" download="responsiveBootstrap"><img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p  class="text-center">Created a website with a custom Bootstrap layout grid, Inserted a navigation bar, a container for a hero image, glyphicons and page content by working with columns and containers.</p>
-      </article>
-      <article class="col-sm-6 col-md-4 box-one boxwrapper"><img src="images/thumbnail-SVG/thumbnail-4.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Interactive Resume</h2>
-        <h3><em> jQuery | JavaScript | JSON | HTML | CSS</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/interactive_Resume.zip" download="interactiveResume"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">Using jQuery, I developed an interactive resume application that reads all data from a JSON file and then dynamically modifies the DOM to display the information.</p>
-      </article>
-      <article class="col-sm-6 col-md-4 box-two boxwrapper"><img src="images/thumbnail-SVG/thumbnail-2.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">SEO Audit</h2>
-        <h3><em>SEO</em></h3>
-        <a class="btn btn-lg" href="projects/P4_-_SEO_Audit__Project_Template_Slides.pdf" download="seoAudit"><img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">Performed an audit of a website, recommended actions to improve the website's ranking in search engine results, created a target keyword list, evaluated the design, content and the UX of the site, and recommended improvements.</p>
-      </article>
-      <div class="clearfix visible-sm-block "></div>
-      <article class="col-sm-6 col-md-4 box-three boxwrapper"><img src="images/thumbnail-SVG/thumbnail-3.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Classic Arcade Game Clone</h2>
-        <h3><em>JavaScript | Object-Oriented Programming | HTML5 Canvas</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Arcade-game_Frogger-Clone.zip" download="ArcadeGameProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">An HTML5 Canvas powered video game, developed using the best practices in Object Oriented JavaScript.</p>
-      </article>
-      <div class="clearfix visible-md-block visible-lg-block"></div>
-      <article class="col-sm-6 col-md-4 box-four boxwrapper"><img src="images/thumbnail-SVG/thumbnail-1.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Website Optimization</h2>
-        <h3><em>HTML | CSS | Chrome Developer Tools | critical rendering path | 60FPS rendering</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Optimization3.zip" download="optimizationProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">Optimized an inefficient web application's JavaScript, CSS and assets delivery, ensuring it runs at 60fps and achieves a PageSpeed score of at least 90.</p>
-      </article>
-      <article class="col-sm-6 col-md-4 box-three boxwrapper"><img src="images/thumbnail-SVG/thumbnail-3.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Typing Speed Tester </h2>
-        <h3><em>JavaScript | CSS | HTML</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Typing_Speed_Tester.zip" download="speedTesterProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">Used JavaScript to interact with the components of a app by creating event listeners to detect typing in the text area. Built a count-up timer. Created functions for leading zeros, spelling errors detector, and a reset button to stop the timer when the test is done.</p>
-      </article>
-      <article class="col-sm-6 col-md-4 box-two boxwrapper"><img src="images/thumbnail-SVG/thumbnail-2.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Run an AdWords Campaign</h2>
-        <h3><em>Search advertising with Adwords</em></h3>
-        <a class="btn btn-lg" href="projects/P5_-Part_2.pdf" download="adWordProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center detail">Created, executed, and monitored a search engine marketing campaign on AdWords for a product. Evaluated post-campaign results to and drafted a strategy for additional campaigns focused on ROI.</p>
-      </article>
-      <div class="clearfix visible-sm-block"></div>
-      <div class="clearfix visible-sm-block"></div>
-      <article class="col-sm-12 col-md-12 box-sp-two boxwrapper"><img src="images/thumbnail-SVG/thumbnail-3.svg" class="img-thumbnail img-responsive center-block imgwrapper" width="100" alt="thumbnail1">
-        <h2 class="textsh">Analog clock</h2>
-        <h3><em>JavaScript | CSS | HTML</em></h3>
-        <a class="btn btn-lg" href="https://s3.us-east-2.amazonaws.com/liamkande.com/projects/Analog_Clock_Project.zip" download="clockProject"> <img src="images/Download-Glyph.svg" width="30" alt="Download icon">
-        <h5>DOWNLOAD</h5>
-        </a>
-        <p class="text-center">Used objects and methods to get the current time, variables to hold information, methods to break that time, operators to translate information into degrees and DOM element properties for positioning.</p>
-      </article>
       <div class="col-sm-12">&nbsp; </div>
       <div class="col-sm-12">&nbsp; </div>
       <div class="col-sm-12">&nbsp; </div>
